# routina

./: .gitignore  LICENSE  README.md  pyproject.toml  server.py
prompts/: routina_default.txt
schemas/: routina_v1.json
src/routina/: config.py  db.py  llm.py  validate.py
static/: app.js  index.html  styles.css
